if(TARGET ur10)
  set(ROBOT_MODULE_PARAMS "\"UR10\"")
  configure_file("${CMAKE_CURRENT_SOURCE_DIR}/loader.in.cpp" "${CMAKE_CURRENT_BINARY_DIR}/mc_ur10/loader.cpp")
  add_executable(loader_ur10 "${CMAKE_CURRENT_BINARY_DIR}/mc_ur10/loader.cpp")
  target_link_libraries(loader_ur10 PUBLIC mc_rtc::mc_rbdyn)
  add_test(NAME loader_ur10 COMMAND loader_ur10 "$<TARGET_FILE_DIR:ur10>")
endif()
